--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@bazzite/nuxt-optimized-images": "^0.3.0"
-  },
-  "devDependencies": {}
+    "@bazzite/nuxt-optimized-images": "^0.3.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "nuxt": "^2.0.0"
+  }
 }
