--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@bazzite/nuxt-optimized-images": "^0.3.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-adsense": "^2.0.0",
     "nuxt": "^2.0.0"
   }
 }
